fix z-index

--- a/src/styles/main.styl
+++ b/src/styles/main.styl
@@ -62,3 +62,7 @@ table.table tr:not(:last-child){
   width: 256px;
 }
 
+.btn--floating{
+  z-index: 1;
+}
+
